the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: project-image-claim
      containers:
        - name: the-project
          image: PROJECT/IMAGE
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
---
apiVersion: v1
kind: Service
metadata:
  name: the-project
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-project
                port:
                  number: 3000
